--- a/src/app/birds/birds.component.html
+++ b/src/app/birds/birds.component.html
@@ -17,11 +17,7 @@
                 <i class=" fas fa-solid fa-list"></i>birds list
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/edit-birds" routerLinkActive="active">
-                <i class="fas fa-thin fa-pen"></i>Edit birds
-              </a>
-            </li>
+           
          
            
           </ul>
@@ -42,7 +38,7 @@
                   <h2 class="h2">Birds</h2>
                 </div>
                 
-                <form [formGroup]="birdsForm" (ngSubmit)="submitBirdsData()" novalidate>
+                <form [formGroup]="birdsForm" (ngSubmit)="submitBirdsData(birdsForm.value)" novalidate style="background-image: url('assets/images/birdbac1.jpg'); background-size: cover; color: whitesmoke;  ">
                   <div class="row" >
                     <div class="col-lg-5 col-md-12 col-sm-12">
                       <div class="row">
@@ -54,7 +50,7 @@
                             class="form-control"
                             required
                           />
-                        
+                         
                 
                       </div>
                          <div class="col-md-12 mb-3">
@@ -65,7 +61,7 @@
                             class="form-control"
                             required
                           />
-                
+                         
                       </div>
                       <div class="col-md-12 mb-3">
                           <label>Group Name</label>
@@ -75,17 +71,20 @@
                             class="form-control"
                             required
                           />
-                
+                         
                       </div>
                  <div class="col-md-12 mb-3">
-                          <label>Image</label>
-                          <input
-                            type="file"
-                            formControlName="image"
-                            class="form-control"
-                            required
-                          />
-                
+                  <img [src]="imageSrcs" width="350px" height="250px" (click)="fileUploader.click()">
+                  <label>Select file to upload</label>
+                  <input
+                    type="file"
+                    accept="image/*"
+                    formControlName="image"
+                    (change)="showPreview($event)"
+                    class="form-control"
+                    #fileUploader
+                    required
+                  />
                       </div>
                 
                       <div class="col-md-12 mb-3">
@@ -96,7 +95,7 @@
                             class="form-control"
                             required
                           />
-                
+                         
                       </div>
                        
                     
