--- a/src/app/butterflies/butterflies.component.html
+++ b/src/app/butterflies/butterflies.component.html
@@ -17,11 +17,7 @@
                 <i class=" fas fa-solid fa-list"></i>butterfly list
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/edit-butterfly" routerLinkActive="active">
-                <i class="fas fa-thin fa-pen"></i>Edit butterfly
-              </a>
-            </li>
+           
          
            
           </ul>
@@ -42,7 +38,7 @@
                   <h2 class="h2">Butterfly</h2>
                 </div>
                 
-                <form [formGroup]="butterflyForm" (ngSubmit)="submitButterflyData()" novalidate>
+                <form [formGroup]="butterflyForm" (ngSubmit)="submitButterflyData(butterflyForm.value)" novalidate style="background-image: url('assets/images/butterfly3.jpg'); background-size: cover; color: whitesmoke;  ">
                   <div class="row" >
                     <div class="col-lg-5 col-md-12 col-sm-12">
                       <div class="row">
@@ -55,7 +51,9 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="commonname.touched && commonname.invalid" class="error">
+                            <sup>*</sup>Please enter commonname
+                          </p>
                       </div>
                          <div class="col-md-12 mb-3">
                           <label>Description</label>
@@ -65,18 +63,22 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="description.touched && description.invalid" class="error">
+                            <sup>*</sup>Please enter description 
+                          </p>
                       </div>
   
                          <div class="col-md-12 mb-3">
-                          <label>familyname</label>
+                          <label>Family Name</label>
                           <input
                             type="text"
                             formControlName="familyname"
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="familyname.touched && familyname.invalid" class="error">
+                            <sup>*</sup>Please enter familyname
+                          </p>
                       </div>
                        <div class="col-md-12 mb-3">
                           <label>Host plants</label>
@@ -86,16 +88,22 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="hostplants.touched && hostplants.invalid" class="error">
+                            <sup>*</sup>Please enter Hostplants details
+                          </p>
                       </div> 
                  <div class="col-md-12 mb-3">
-                          <label>Image</label>
-                          <input
-                            type="file"
-                            formControlName="image"
-                            class="form-control"
-                            required
-                          />
+                  <img [src]="imageSrcs" width="350px" height="250px" (click)="fileUploader.click()">
+                  <label>Select file to upload</label>
+                  <input
+                    type="file"
+                    accept="image/*"
+                    formControlName="image"
+                    (change)="showPreview($event)"
+                    class="form-control"
+                    #fileUploader
+                    required
+                  />
                 
                       </div>
                 
