--- a/src/app/edit-herbs/edit-herbs.component.html
+++ b/src/app/edit-herbs/edit-herbs.component.html
@@ -14,7 +14,7 @@
 <div class="row">
   <div class="col-lg-12">
     <div class="pricing-header form-block mx-auto">
-      <form [formGroup]="editherbsForm" (ngSubmit)="updateForm()" novalidate>
+      <form [formGroup]="editherbsForm" (ngSubmit)="updateForm(editherbsForm.value)" novalidate>
         <div class="row">
           <div class="col-lg-5 col-md-12 col-sm-12">
             <div class="row">
@@ -38,16 +38,7 @@
           />
 
       </div>
- <div class="col-md-12 mb-3">
-          <label>Image</label>
-          <input
-            type="file"
-            formControlName="image"
-            class="form-control"
-            required
-          />
-
-      </div>
+ 
 
       <div class="col-md-12 mb-3">
           <label>Scientific Name</label>
