--- a/src/app/flora/flora.component.html
+++ b/src/app/flora/flora.component.html
@@ -1,11 +1,13 @@
 <!-- Top navigation -->
 <div class="main">
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow" >
     
   <a class="navbar-brand col-sm-3 col-md-2 mr-0">
-  <div class="maintitle">MCC BIODIVERSITY</div>
+    <div style="display: flex;">
+  <div class="image"><img [src]="imageSrc" style="width: 80px; height: 80px;"></div>
+  <div class="maintitle" style="padding-top: 30px;">MCC BIODIVERSITY</div>
 
-
+</div>
     
   </a>
   
@@ -14,8 +16,8 @@
 
   
  <!-- Main content -->
-<div class="container">
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+<div class="container" >
+  <nav class="navbar navbar-expand-lg navbar-light bg-light"style="margin-top: 50px;">
     <div class="container-fluid">
       
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,8 +52,7 @@
           
         </ul>
         <form class="d-flex">
-          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">Search</button>
+        
         </form>
       </div>
     </div>
@@ -69,6 +70,8 @@
 
     </p>
    
+  
+  
   </div>
   <div class="video">
   
