--- a/src/app/herbs-list/herbs-list.component.html
+++ b/src/app/herbs-list/herbs-list.component.html
@@ -21,17 +21,25 @@
     <p class="nodata-msg">No herbs added yet!</p>
     
   </div>
+  <div>
+    <input type="text" [(ngModel)]="filterTerm" placeholder="search by tree name" class="form-control">
+    <div *ngFor = "
+    let herb of Herbs
+    | filter:filterTerm" >
+     
+    </div>
 
+</div>  
   <div class="table-responsive" >
     <table
       class="table table-bordered table-responsive-sm table-responsive-md table-responsive-lg"
     >
       <thead>
         <tr>
-          <th scope="col">Key</th>
+          
           <th scope="col">commonname</th>
           <th scope="col">Description</th>
-          <th scope="col">Image</th>
+          
           <th scope="col">Scientificname</th>
           <th scope="col">Season</th>
            <th scope="col">Treename</th>
@@ -42,27 +50,27 @@
         <tr
           *ngFor="
             let herb of Herbs
-              | paginate: { itemsPerPage: 8, currentPage: p };
+              | paginate: { itemsPerPage: 8, currentPage: p } | filter:filterTerm ;
             let i = index
           "
         >
-          <th scope="row">{{ herb.$key }}</th>
+       
           <td>{{ herb.commonname }} </td>
           <td>{{ herb.description }} </td>
-          <td>{{ herb.image }}</td>
+        
           <td>{{ herb.scientificname }}</td>
            <td>{{ herb.season}}</td>
            <td>{{ herb.treename}}</td>
           <td class="text-center action-block">
             <span
               class="mr-2 btn btn-outline-primary btn-sm"
-              routerLink="/edit-herbs/"
-              >Edit</span
+              routerLink="/edit-herbs/{{herb.$key}}"
+              ><i class="fas fa-thin fa-pen"></i></span
             >
             <span
               class="btn btn-outline-danger btn-sm"
               (click)="deleteHerbs(herb)"
-              >Delete</span
+              ><i class="fas fa-trash"></i></span
             >
           </td>
         </tr>
