--- a/src/app/liana-list/liana-list.component.html
+++ b/src/app/liana-list/liana-list.component.html
@@ -21,17 +21,23 @@
     <p class="nodata-msg">No liana added yet!</p>
     
   </div>
-
+  <div>
+    <input type="text" [(ngModel)]="filterTerm" placeholder="search by tree name" class="form-control">
+    <div *ngFor = "
+    let lian of Liana
+    | filter:filterTerm" >
+     
+    </div>
   <div class="table-responsive" >
     <table
       class="table table-bordered table-responsive-sm table-responsive-md table-responsive-lg"
     >
       <thead>
         <tr>
-          <th scope="col">Key</th>
+          
           <th scope="col">commonname</th>
           <th scope="col">Description</th>
-          <th scope="col">Image</th>
+         
           <th scope="col">Scientificname</th>
           <th scope="col">Season</th>
            <th scope="col">Treename</th>
@@ -42,27 +48,27 @@
         <tr
           *ngFor="
             let lian of Liana
-              | paginate: { itemsPerPage: 8, currentPage: p };
+              | paginate: { itemsPerPage: 8, currentPage: p } | filter:filterTerm;
             let i = index
           "
         >
-          <th scope="row">{{ lian.$key }}</th>
+          
           <td>{{ lian.commonname }} </td>
           <td>{{ lian.description }} </td>
-          <td>{{ lian.image }}</td>
+         
           <td>{{ lian.scientificname }}</td>
            <td>{{ lian.season}}</td>
            <td>{{ lian.treename}}</td>
           <td class="text-center action-block">
             <span
               class="mr-2 btn btn-outline-primary btn-sm"
-              routerLink="/edit-liana/"
-              >Edit</span
+              routerLink="/edit-liana/{{lian.$key}}"
+              ><i class="fas fa-thin fa-pen"></i></span
             >
             <span
               class="btn btn-outline-danger btn-sm"
               (click)="deleteLiana(lian)"
-              >Delete</span
+              ><i class="fas fa-trash"></i></span
             >
           </td>
         </tr>
