--- a/src/app/tree/tree.component.html
+++ b/src/app/tree/tree.component.html
@@ -17,11 +17,7 @@
                 <i class=" fas fa-solid fa-list"></i>tree list
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" routerLink="/edit-tree" routerLinkActive="active">
-                <i class="fas fa-thin fa-pen"></i>Edit tree
-              </a>
-            </li>
+            
          
            
           </ul>
@@ -42,7 +38,7 @@
                   <h2 class="h2">Tree</h2>
                 </div>
                 
-                <form [formGroup]="treeForm" (ngSubmit)="submitTreeData()" novalidate>
+                <form [formGroup]="treeForm" (ngSubmit)="submitTreeData(treeForm.value)" novalidate  style="background-image: url('assets/images/tree.jpg'); background-size: cover; color: whitesmoke;  ">
                   <div class="row" >
                     <div class="col-lg-5 col-md-12 col-sm-12">
                       <div class="row">
@@ -55,7 +51,9 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="commonname.touched && commonname.invalid" class="error">
+                            <sup>*</sup>Please enter commonname
+                          </p>
                       </div>
                          <div class="col-md-12 mb-3">
                           <label>Description</label>
@@ -65,17 +63,23 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="description.touched && description.invalid" class="error">
+                            <sup>*</sup>Please enter description 
+                          </p>
                       </div>
                  <div class="col-md-12 mb-3">
-                          <label>Image</label>
+                   <img [src]="imageSrc" width="350px" height="250px" (click)="fileUploader.click()">
+                          <label>Select file to upload</label>
                           <input
                             type="file"
+                            accept="image/*"
                             formControlName="image"
+                            (change)="showPreview($event)"
                             class="form-control"
+                            #fileUploader
                             required
                           />
-                
+                       
                       </div>
                 
                       <div class="col-md-12 mb-3">
@@ -86,7 +90,9 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="scientificname.touched && scientificname.invalid" class="error">
+                          <sup>*</sup>Please enter scientificname 
+                        </p>
                       </div>
                        
                       </div>
@@ -100,7 +106,9 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="season.touched && season.invalid" class="error">
+                            <sup>*</sup>Please enter season
+                          </p>
                       </div>
                 
                       <div class="col-md-12 mb-3">
@@ -111,7 +119,9 @@
                             class="form-control"
                             required
                           />
-                
+                          <p *ngIf="treename.touched && treename.invalid" class="error">
+                            <sup>*</sup>Please enter treename
+                          </p>
                       </div>
                      
                 
